<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".activities.AuthentificationActivity">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:src="@drawable/pnglogo"
    />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        app:boxBackgroundColor="@color/white"
        android:hint="Email"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="24dp"
        app:passwordToggleEnabled="true"
        android:hint="Password"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConnect"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        app:cornerRadius="4dp"
        android:layout_marginTop="50dp"
        android:text="Se connecter"
        />
    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Créer un compte"
        android:layout_gravity="center"
        android:textSize="16dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        />
</LinearLayout>